## Process this file with automake to produce Makefile.in

SUBDIRS =

if HAVE_BTRFS
SUBDIRS += btrfs
endif # HAVE_BTRFS

if HAVE_ISCSI
SUBDIRS += iscsi
endif # HAVE_ISCSI

if HAVE_LVM2
SUBDIRS += lvm2
endif # HAVE_LVM2

if HAVE_ZRAM
SUBDIRS += zram
endif # HAVE_ZRAM

if HAVE_LSM
SUBDIRS += lsm
endif # HAVE_LSM

if HAVE_BCACHE
SUBDIRS += bcache
endif # HAVE_BCACHE

if HAVE_VDO
SUBDIRS += vdo
endif # HAVE_VDO

NULL =
